--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 auto: true
 server: true
-baseurl: http://rustyb.github.com/spaceinvaders
+baseurl: http://www.dublinspaceinvaders.co
 permalink: /:title
