include prose in config

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,8 @@ auto: true
 server: true
 baseurl: http://www.dublinspaceinvaders.co
 permalink: /:title
+prose:
+  rooturl: '_posts'
+  siteurl: "http://dublinspaceinvaders.co"
+  media: "media"
+
