--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ server: true
 baseurl: http://www.dublinspaceinvaders.co
 permalink: /:title
 prose:
-  rooturl: '_posts'
+  #rooturl: '_posts'
   siteurl: 'http://www.dublinspaceinvaders.co'
   media: 'media'
   metadata:
