--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ server: true
 baseurl: http://www.dublinspaceinvaders.co
 permalink: /:title
 prose:
-  siteurl: 'http://www.dublinspaceinvaders.co'
-  media: 'media'
+  media: "media"
   metadata:
     _posts:
       - name: "title"
