--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ server: true
 baseurl: http://www.dublinspaceinvaders.co
 permalink: /:title
 prose:
+  rooturl: '_posts'
   media: "media"
   metadata:
     _posts:
